apps/external-apps/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: external-apps
spec:
  type: ExternalName
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  externalName: 10.69.1.69
