apps/external-apps/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`jelly.local.cvsickle.com`)
      kind: Rule
      services:
        - name: jellyfin
          namespace: external-apps
          port: 8096
